[package]
name = "huemanity"
version = "0.1.2"
authors = ["Finnkauski <iwiivi@gmail.com>"]
description="A simple wrapper and CLI for the Phillips Hue lights."
license="AGPL-3.0-or-later"
homepage="https://github.com/finnkauski/huemanity"
documentation="https://github.com/finnkauski/huemanity"
repository="https://github.com/finnkauski/huemanity"

[dependencies]
clap = "2.33.0"
reqwest = "0.9.24"
serde_json = "1.0.44"
serde = "1.0.103"
http = "0.1.21"
dotenv = "0.15.0"

[lib]
name = "huemanity"
path = "src/lib.rs"

[[bin]]
name = "huemanity"
path = "src/bin.rs"
