[package]
name = "huemanity"
version = "0.1.7"
authors = ["Finnkauski <iwiivi@gmail.com>"]
description="A simple wrapper and CLI for the Phillips Hue lights. Added registration, but you need to know the IP of the bridge."
license="AGPL-3.0-or-later"
homepage="https://finnkauski.com"
documentation="https://docs.rs/huemanity/"
repository="https://github.com/finnkauski/huemanity"
edition="2018"
readme="README.md"

[dependencies]
clap = "2.33.0"
reqwest = "0.9.24"
serde_json = "1.0.44"
serde = "1.0.103"
http = "0.1.21"
dotenv = "0.15.0"
dirs = "2.0.2"
ssdp = "0.7.0"
log = "0.4.8"
simplelog = "0.7.4"


[lib]
name = "huemanity"
path = "src/lib.rs"

[[bin]]
name = "huemanity"
path = "src/bin/huemanity.rs"
